--- a/data_analysis_code.Rmd
+++ b/data_analysis_code.Rmd
@@ -32,7 +32,7 @@ load(file = "dataset_full.rdata")
 
 load(file = "dataset_complete_cases.rdata")
 
-load(file = "dataset_complete_cases_forget_funding.rdata")
+load(file = "dataset_complete_cases_forget_funding.rdata") # no per cap variable so N goes to ~9000
 
 ```
 
@@ -671,6 +671,8 @@ set.seed(252)
 
 
 ```{r preliminary data analysis BY STEPHEN, eval=FALSE, include=FALSE}
+# make into a dataframe
+  dataset_complete_cases <- as.data.frame(dataset_complete_cases)
 # basic bits about data
   names(dataset_complete_cases)
   (n <- nrow(dataset_complete_cases)) # checks out with Katie's description -> yay, using correct dataset
@@ -703,7 +705,7 @@ set.seed(252)
   dataset_complete_cases$math_standard_met <- dataset_complete_cases$math_standard_met/100
 # correlations between predictors
   predictor_corrs <- Hmisc::rcorr(as.matrix(dataset_complete_cases[,c(3,num_cols)]))$r
-  openxlsx::write.xlsx(list(predictor_corrs),"~/Desktop/PH252D/cifp/output_for_writeups/predictor_correlations.xlsx",colNames=T,rowNames=T)
+  #openxlsx::write.xlsx(list(predictor_corrs),"~/Desktop/PH252D/cifp/output_for_writeups/predictor_correlations.xlsx",colNames=T,rowNames=T)
   
 ```
 
@@ -711,8 +713,8 @@ set.seed(252)
 set.seed(252)
 # specify SL library
   listWrappers()
-  SL.library <- c("SL.mean","SL.glm","SL.glm.interaction","SL.randomForest","SL.rpartPrune","SL.biglasso")
-  other_options <- c("SL.glm.interaction","SL.randomForest","SL.polymars","SL.rpartPrune","SL.biglasso")
+  SL.library <- c("SL.mean","SL.glm")
+  other_options <- c("SL.glm.interaction","SL.randomForest","SL.polymars","SL.rpartPrune")
 # SS, IPTW, & TMLE function
   run.tmle <- function(Y,A,ObsData, SL.library, id=NULL) {
    
@@ -728,7 +730,7 @@ set.seed(252)
         X0[,A] <- 0 # under control
     
        # call Super Learner for estimation of QbarAW
-        QbarSL<- SuperLearner(Y=ObsData[,Y], X=X, SL.library=SL.library, family="gaussian", id=id)
+        QbarSL<- SuperLearner(Y=ObsData[,Y], X=X, SL.library=SL.library, family="binomial", id=id)
         # QbarSL
         
        # initial estimates of the outcome, given the observed exposure & covariates
@@ -766,13 +768,13 @@ set.seed(252)
        H.1W<- 1/gHat1W
        H.0W<- -1/gHat0W
        
-     # IPTW estimator of the G-computation formula:
+     # IPTW estimator of the G-computation formula: -> INCLUDE HORVITZ-THOMPSON 
       PsiHat.IPTW <-mean( H.AW*ObsData[,Y])
   
     #------------------------------------------
     # Update the initial estimator of Qbar_0(A,W)
     #------------------------------------------
-      logitUpdate<- glm(ObsData[,Y] ~ -1 +offset(qlogis(QbarAW)) + H.AW, family='gaussian')
+      logitUpdate<- glm(ObsData[,Y] ~ -1 +offset(qlogis(QbarAW)) + H.AW, family='binomial')
       epsilon <- logitUpdate$coef
   
       QbarAW.star<- plogis(qlogis(QbarAW)+ epsilon*H.AW)
@@ -797,20 +799,28 @@ set.seed(252)
   }
 # practice run of function
   # subset of rows
-    sub_data <- dataset_complete_cases[sample(1:n,500,replace=F),]
+    sub_data <- dataset_complete_cases[sample(1:n,1000,replace=F),]
     nrow(sub_data)
     duplicated(sub_data$cds_code)
+    table(sub_data$pm25_12_plus)
   # run function
-    out <- run.tmle(Y="math_standard_met", A="pm25_12_plus", ObsData=sub_data[,-c(1,4)], SL.library=SL.library) 
+    names(sub_data)
+    exclude_vars_analysis <- c("cds_code","air_district","white_percent")
+    out <- run.tmle(Y="math_standard_met", A="pm25_12_plus", ObsData=sub_data[,!(names(sub_data) %in% exclude_vars_analysis)], SL.library=SL.library) 
       # generating a ton of errors. removing algorithms from SuperLearner
       # think interaction algorithms will be super problematic bc number of covariates is really high from all the districts
       # FIGURED OUT ISSUE: When we resample, not all districts are in each sample and predictions are generated for non-existent districts and not generated for extisting districts
     est <- out$estimates
     est*100
- 
+# the real thing
+  out <- run.tmle(Y="math_standard_met", A="pm25_12_plus", ObsData=dataset_complete_cases[,!(names(dataset_complete_cases) %in% exclude_vars_analysis)], SL.library=SL.library) 
+  est <- out$estimates
+  est*100
+   
 # run with ltmle for comparison
-  sub_data2 <- sub_data[,-c(1,4)]
-  sub_data2 <- sub_data2[,c(names(sub_data2[3:11]),"math_standard_met","pm25_12_plus")]
+  sub_data2 <- sub_data[,!(names(sub_data) %in% exclude_vars_analysis)] # remove percent white too
+  names(sub_data2)
+  sub_data2 <- sub_data2[,c(names(sub_data2[3:12]),"math_standard_met","pm25_12_plus")]
   ltmle.SL<- ltmle(data=sub_data2, Anodes='pm25_12_plus', Ynodes='math_standard_met', abar=list(1,0),SL.library=SL.library)  
   summary(ltmle.SL)  
 
