--- a/final_project_dag.Rmd
+++ b/final_project_dag.Rmd
@@ -124,8 +124,8 @@ ggdag_adjustment_set(model3,text_col="black")
   # - enter associations between variables on the line following the equation for the variable and indented
   # - observed variables = PM2.5, Scores, Absenteeism, Suspension, FreeLunch, MinorityPerc, ESL, AirBasin, PerCapEduFund
 model4 <- dagify(PM2.5 ~ PolicyInfluence + LandUsePolicy + GeoFeat + AirPolicy,
-                Scores ~ PM2.5 + Absenteeism + Suspension + FreeLunch + ESL + AirBasin + PerCapEduFund +
-                         TeacherDiscrim + TeacherQual,
+                MathScores ~ PM2.5 + Absenteeism + Suspension + FreeLunch + ESL + AirBasin + PerCapEduFund + StuTeachRatio +
+                             TeacherDiscrim + TeacherQual,
                 Absenteeism ~ PM2.5 + Suspension,
                 Suspension ~ PM2.5 + 
                              TeacherDiscrim,
@@ -133,7 +133,10 @@ model4 <- dagify(PM2.5 ~ PolicyInfluence + LandUsePolicy + GeoFeat + AirPolicy,
                 PoCPerc ~ LandUsePolicy,
                 ESL ~ FamSpeakEng,
                 AirBasin ~ GeoFeat,
-                PerCapEduFund ~ LandUsePolicy + LocalPropertyTax + FreeLunch,
+                PerCapEduFund ~ FreeLunch + 
+                                LandUsePolicy + LocalPropertyTax,
+                StuTeachRatio ~ SchoolEnroll + HouseWealth + HouseIncome,
+                SchoolEnroll ~ LandUsePolicy,
                 
                 PolicyInfluence ~ PoCPerc + 
                                   FamSpeakEng + HouseIncome,
@@ -144,16 +147,31 @@ model4 <- dagify(PM2.5 ~ PolicyInfluence + LandUsePolicy + GeoFeat + AirPolicy,
                 TeacherQual ~ PerCapEduFund + 
                               LandUsePolicy + HouseIncome,
                 HouseIncome ~ PoCPerc + LandUsePolicy + FamSpeakEng,
+                HouseWealth ~ PoCPerc + LandUsePolicy + FamSpeakEng,
                 FamSpeakEng ~ PoCPerc,
-                LocalPropertyTax ~ HouseIncome,
-                exposure="PM2.5",outcome="Scores",
-                latent=c("PolicyInfluence","LandUsePolicy","GeoFeat","AirPolicy","TeacherDiscrim","HouseIncome","FamSpeakEng","LocalPropertyTax"),
-                coords=list(x=c(PM2.5=-5,Scores=4,Absenteeism=-1.5,Suspension=-2,FreeLunch=1.75,PoCPerc=-5,ESL=2,AirBasin=-2.35,PerCapEduFund=3.5,
-                                PolicyInfluence=-5,LandUsePolicy=-1,GeoFeat=-3,AirPolicy=-2.75,TeacherDiscrim=0,TeacherQual=3.75,HouseIncome=0.75,FamSpeakEng=1,LocalPropertyTax=1.75),
-                            y=c(PM2.5=-0.5,Scores=-2,Absenteeism=-1.5,Suspension=-2.5,FreeLunch=0.8,PoCPerc=5,ESL=3.5,AirBasin=0.75,PerCapEduFund=4,
-                                PolicyInfluence=4,LandUsePolicy=6,GeoFeat=0,AirPolicy=-0.25,TeacherDiscrim=0.25,TeacherQual=3,HouseIncome=1.3,FamSpeakEng=4.25,LocalPropertyTax=2.05))
+                LocalPropertyTax ~ HouseIncome + HouseWealth,
+                exposure="PM2.5",outcome="MathScores",
+                latent=c("PolicyInfluence","LandUsePolicy","GeoFeat","AirPolicy","TeacherDiscrim","HouseIncome","FamSpeakEng","LocalPropertyTax","HouseWealth"),
+                coords=list(x=c(PM2.5=-5,MathScores=4,Absenteeism=-1.5,Suspension=-2,FreeLunch=1.75,PoCPerc=-5,ESL=2,AirBasin=-2.35,PerCapEduFund=3.5,StuTeachRatio=-2.4,SchoolEnroll=-2.75,
+                                PolicyInfluence=-5,LandUsePolicy=-1,GeoFeat=-3,AirPolicy=-2.75,TeacherDiscrim=0,TeacherQual=3.75,HouseIncome=0.75,FamSpeakEng=1,LocalPropertyTax=1.75,HouseWealth=0),
+                            y=c(PM2.5=-0.5,MathScores=-2,Absenteeism=-1.5,Suspension=-2.5,FreeLunch=0.8,PoCPerc=5,ESL=3.5,AirBasin=0.75,PerCapEduFund=4,StuTeachRatio=1.4,SchoolEnroll=2,
+                                PolicyInfluence=4,LandUsePolicy=6,GeoFeat=0,AirPolicy=-0.25,TeacherDiscrim=0.25,TeacherQual=3,HouseIncome=1.3,FamSpeakEng=4.25,LocalPropertyTax=2.05,HouseWealth=2.5))
                 )
 ggdag(model4,node=FALSE,text_col="black")
 ggdag_adjustment_set(model4,text_col="black")
+```
+
+```{r, Practice to see how ggdag handles Us}
+model_u <- dagify(Y ~ A + W + U_y,
+                  A ~ W + U_a,
+                  W ~ U_w,
+                  U_y ~~ U_a + U_w,
+                  U_a ~~ U_w,
+                  exposure="A",outcome="Y",
+                  #latent=c("U_a","U_y","U_w"),
+                  coords=list(x=c(A=-1,Y=1,W=0,U_a=-1.5,U_y=1.5,U_w=0),
+                              y=c(A=0,Y=0,W=1.5,U_a=-0.5,U_y=-0.5,U_w=2)))
+ggdag(model_u)
+ggdag_adjustment_set(model_u)
 ```
 
